// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ESport matches snapshot on initial tab 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "padding": 8,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "maxWidth": "33%",
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          {
            "padding": 2,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignItems": "center",
              "padding": 4,
            }
          }
        >
          <Text
            style={
              {
                "color": "#24094FFF",
                "fontFamily": "AgencyFB-Bold",
                "fontSize": 16,
                "textShadowColor": undefined,
                "textShadowRadius": 2,
              }
            }
          >
            active
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "maxWidth": "33%",
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          {
            "padding": 1,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "padding": 1,
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "padding": 1,
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                {
                  "alignItems": "center",
                  "padding": 3,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "AgencyFB-Bold",
                    "fontSize": 16,
                    "textShadowColor": "#562E95FF",
                    "textShadowRadius": 1.5,
                  }
                }
              >
                past
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "gap": 16,
        "padding": 16,
      }
    }
    data={
      [
        {
          "countryCode": "US",
          "endAt": "2025-01-05T18:00:00.000Z",
          "events": [
            {
              "id": 1,
              "name": "Event 1",
              "numEntrants": 50,
              "startAt": "2025-01-05T10:00:00.000Z",
            },
          ],
          "id": 1,
          "imageUrl": "https://example.com/image1.png",
          "isOnline": true,
          "name": "Test Tournament 1",
          "numAttendees": 100,
          "startAt": "2025-01-05T09:00:00.000Z",
          "state": "ongoing",
          "url": "https://example.com/tournament/1",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <RCTRefreshControl />
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderRadius": 14,
              "boxShadow": [
                {
                  "blurRadius": 5,
                  "color": "black",
                  "offsetX": 0,
                  "offsetY": 0,
                  "spreadDistance": 0,
                },
              ],
              "flex": 1,
              "overflow": "hidden",
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              {
                "flex": 1,
                "margin": 5,
                "marginBottom": 8,
                "padding": 8,
              }
            }
          >
            <View
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <ViewManagerAdapter_ExpoImage
                backgroundColor={4294967295}
                borderRadius={12}
                bottom={0}
                containerViewRef={"[React.ref]"}
                contentFit="fill"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                left={0}
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                position="absolute"
                right={0}
                sfEffect={null}
                source={
                  [
                    {
                      "testUri": "../../../src/assets/images/ui/item-bg.png",
                    },
                  ]
                }
                style={
                  {
                    "backgroundColor": "white",
                    "borderRadius": 12,
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                symbolSize={null}
                symbolWeight={null}
                top={0}
                transition={null}
              />
            </View>
            <View
              style={
                {
                  "flexDirection": "row",
                  "gap": 8,
                  "paddingBottom": 8,
                }
              }
            >
              <ViewManagerAdapter_ExpoImage
                aspectRatio={1}
                borderRadius={8}
                containerViewRef={"[React.ref]"}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height="auto"
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                sfEffect={null}
                source={
                  [
                    {
                      "uri": "https://example.com/image1.png",
                    },
                  ]
                }
                style={
                  {
                    "aspectRatio": 1,
                    "borderRadius": 8,
                    "height": "auto",
                  }
                }
                symbolSize={null}
                symbolWeight={null}
                transition={null}
              />
              <View
                style={
                  {
                    "flexShrink": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "flexDirection": "row",
                      "flexShrink": 1,
                      "gap": 8,
                      "justifyContent": "space-between",
                      "marginBottom": 4,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flexShrink": 1,
                        "overflow": "hidden",
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#FFFFFF",
                          "fontFamily": "AgencyFB-Bold",
                          "fontSize": 18,
                          "textShadowColor": undefined,
                          "textShadowRadius": undefined,
                        }
                      }
                    >
                      Test Tournament 1
                    </Text>
                  </View>
                  <
                    name="arrow-outward"
                    style={
                      {
                        "color": "white",
                        "fontSize": 18,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                      },
                      {
                        "gap": 4,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FAC468",
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textShadowColor": "black",
                        "textShadowRadius": 2,
                      }
                    }
                  >
                    ongoing
                  </Text>
                  <Text
                    style={
                      {
                        "color": "white",
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textShadowColor": undefined,
                        "textShadowRadius": undefined,
                      }
                    }
                  >
                    Jan 05, 2025
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <
                    name="language"
                    style={
                      {
                        "color": "white",
                        "fontSize": 20,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "white",
                        "flexShrink": 1,
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textTransform": "uppercase",
                      }
                    }
                  >
                     - 
                  </Text>
                  <Text
                    style={
                      {
                        "color": "white",
                        "flexShrink": 1,
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textTransform": "uppercase",
                      }
                    }
                  >
                    🇺🇸 - 
                    100
                     attendees
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "gap": 4,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  {
                    "gap": 4,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#4513A1",
                      "height": 1,
                    }
                  }
                />
                <View>
                  <Text
                    style={
                      {
                        "color": "white",
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textShadowColor": undefined,
                        "textShadowRadius": undefined,
                      }
                    }
                  >
                    Event 1
                  </Text>
                  <Text
                    style={
                      [
                        {
                          "color": "white",
                          "flexShrink": 1,
                          "fontFamily": "AgencyFB-Bold",
                          "fontSize": 14,
                          "textTransform": "uppercase",
                        },
                        {
                          "fontSize": 12,
                        },
                      ]
                    }
                  >
                    Jan 05
                     - 
                    50
                     entrants
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`ESport matches snapshot on past tournaments tab 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "center",
        "padding": 8,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "maxWidth": "33%",
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          {
            "padding": 1,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "padding": 1,
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "padding": 1,
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                {
                  "alignItems": "center",
                  "padding": 3,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "AgencyFB-Bold",
                    "fontSize": 16,
                    "textShadowColor": "#562E95FF",
                    "textShadowRadius": 1.5,
                  }
                }
              >
                active
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "maxWidth": "33%",
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          {
            "padding": 2,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignItems": "center",
              "padding": 4,
            }
          }
        >
          <Text
            style={
              {
                "color": "#24094FFF",
                "fontFamily": "AgencyFB-Bold",
                "fontSize": 16,
                "textShadowColor": undefined,
                "textShadowRadius": 2,
              }
            }
          >
            past
          </Text>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "gap": 16,
        "padding": 16,
      }
    }
    data={
      [
        {
          "countryCode": "FR",
          "endAt": "2025-02-05T18:00:00.000Z",
          "events": [
            {
              "id": 2,
              "name": "Event 2",
              "numEntrants": 100,
              "startAt": "2025-02-02T10:00:00.000Z",
            },
          ],
          "id": 2,
          "imageUrl": "https://example.com/image2.png",
          "isOnline": false,
          "name": "Test Tournament 2",
          "numAttendees": 200,
          "startAt": "2025-02-01T09:00:00.000Z",
          "state": "upcoming",
          "url": "https://example.com/tournament/2",
        },
        {
          "countryCode": undefined,
          "endAt": "2025-04-03T11:15:00.000Z",
          "events": [
            {
              "id": 1,
              "name": "Event 1",
              "numEntrants": 50,
              "startAt": "2025-03-30T08:30:00.000Z",
            },
            {
              "id": 2,
              "name": "Event 2",
              "numEntrants": 100,
              "startAt": "2025-04-02T11:15:00.000Z",
            },
          ],
          "id": 3,
          "imageUrl": "https://example.com/image3.png",
          "isOnline": true,
          "name": "Test Tournament 3",
          "numAttendees": 10,
          "startAt": "2025-03-28T08:30:00.000Z",
          "state": "completed",
          "url": "https://example.com/tournament/3",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <RCTRefreshControl />
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderRadius": 14,
              "boxShadow": [
                {
                  "blurRadius": 5,
                  "color": "black",
                  "offsetX": 0,
                  "offsetY": 0,
                  "spreadDistance": 0,
                },
              ],
              "flex": 1,
              "overflow": "hidden",
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              {
                "flex": 1,
                "margin": 5,
                "marginBottom": 8,
                "padding": 8,
              }
            }
          >
            <View
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <ViewManagerAdapter_ExpoImage
                backgroundColor={4294967295}
                borderRadius={12}
                bottom={0}
                containerViewRef={"[React.ref]"}
                contentFit="fill"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                left={0}
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                position="absolute"
                right={0}
                sfEffect={null}
                source={
                  [
                    {
                      "testUri": "../../../src/assets/images/ui/item-bg.png",
                    },
                  ]
                }
                style={
                  {
                    "backgroundColor": "white",
                    "borderRadius": 12,
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                symbolSize={null}
                symbolWeight={null}
                top={0}
                transition={null}
              />
            </View>
            <View
              style={
                {
                  "flexDirection": "row",
                  "gap": 8,
                  "paddingBottom": 8,
                }
              }
            >
              <ViewManagerAdapter_ExpoImage
                aspectRatio={1}
                borderRadius={8}
                containerViewRef={"[React.ref]"}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height="auto"
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                sfEffect={null}
                source={
                  [
                    {
                      "uri": "https://example.com/image2.png",
                    },
                  ]
                }
                style={
                  {
                    "aspectRatio": 1,
                    "borderRadius": 8,
                    "height": "auto",
                  }
                }
                symbolSize={null}
                symbolWeight={null}
                transition={null}
              />
              <View
                style={
                  {
                    "flexShrink": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "flexDirection": "row",
                      "flexShrink": 1,
                      "gap": 8,
                      "justifyContent": "space-between",
                      "marginBottom": 4,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flexShrink": 1,
                        "overflow": "hidden",
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#FFFFFF",
                          "fontFamily": "AgencyFB-Bold",
                          "fontSize": 18,
                          "textShadowColor": undefined,
                          "textShadowRadius": undefined,
                        }
                      }
                    >
                      Test Tournament 2
                    </Text>
                  </View>
                  <
                    name="arrow-outward"
                    style={
                      {
                        "color": "white",
                        "fontSize": 18,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                      },
                      {
                        "gap": 4,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#664D9A",
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textShadowColor": "black",
                        "textShadowRadius": 2,
                      }
                    }
                  >
                    upcoming
                  </Text>
                  <Text
                    style={
                      {
                        "color": "white",
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textShadowColor": undefined,
                        "textShadowRadius": undefined,
                      }
                    }
                  >
                    Feb 01-05, 2025
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "white",
                        "flexShrink": 1,
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textTransform": "uppercase",
                      }
                    }
                  >
                    🇫🇷 - 
                    200
                     attendees
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "gap": 4,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  {
                    "gap": 4,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#4513A1",
                      "height": 1,
                    }
                  }
                />
                <View>
                  <Text
                    style={
                      {
                        "color": "white",
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textShadowColor": undefined,
                        "textShadowRadius": undefined,
                      }
                    }
                  >
                    Event 2
                  </Text>
                  <Text
                    style={
                      [
                        {
                          "color": "white",
                          "flexShrink": 1,
                          "fontFamily": "AgencyFB-Bold",
                          "fontSize": 14,
                          "textTransform": "uppercase",
                        },
                        {
                          "fontSize": 12,
                        },
                      ]
                    }
                  >
                    Feb 02
                     - 
                    100
                     entrants
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderRadius": 14,
              "boxShadow": [
                {
                  "blurRadius": 5,
                  "color": "black",
                  "offsetX": 0,
                  "offsetY": 0,
                  "spreadDistance": 0,
                },
              ],
              "flex": 1,
              "overflow": "hidden",
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              {
                "flex": 1,
                "margin": 5,
                "marginBottom": 8,
                "padding": 8,
              }
            }
          >
            <View
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <ViewManagerAdapter_ExpoImage
                backgroundColor={4294967295}
                borderRadius={12}
                bottom={0}
                containerViewRef={"[React.ref]"}
                contentFit="fill"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                left={0}
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                position="absolute"
                right={0}
                sfEffect={null}
                source={
                  [
                    {
                      "testUri": "../../../src/assets/images/ui/item-bg.png",
                    },
                  ]
                }
                style={
                  {
                    "backgroundColor": "white",
                    "borderRadius": 12,
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                symbolSize={null}
                symbolWeight={null}
                top={0}
                transition={null}
              />
            </View>
            <View
              style={
                {
                  "flexDirection": "row",
                  "gap": 8,
                  "paddingBottom": 8,
                }
              }
            >
              <ViewManagerAdapter_ExpoImage
                aspectRatio={1}
                borderRadius={8}
                containerViewRef={"[React.ref]"}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height="auto"
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                sfEffect={null}
                source={
                  [
                    {
                      "uri": "https://example.com/image3.png",
                    },
                  ]
                }
                style={
                  {
                    "aspectRatio": 1,
                    "borderRadius": 8,
                    "height": "auto",
                  }
                }
                symbolSize={null}
                symbolWeight={null}
                transition={null}
              />
              <View
                style={
                  {
                    "flexShrink": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "flexDirection": "row",
                      "flexShrink": 1,
                      "gap": 8,
                      "justifyContent": "space-between",
                      "marginBottom": 4,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flexShrink": 1,
                        "overflow": "hidden",
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#FFFFFF",
                          "fontFamily": "AgencyFB-Bold",
                          "fontSize": 18,
                          "textShadowColor": undefined,
                          "textShadowRadius": undefined,
                        }
                      }
                    >
                      Test Tournament 3
                    </Text>
                  </View>
                  <
                    name="arrow-outward"
                    style={
                      {
                        "color": "white",
                        "fontSize": 18,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                      },
                      {
                        "gap": 4,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FC7575",
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textShadowColor": "black",
                        "textShadowRadius": 2,
                      }
                    }
                  >
                    completed
                  </Text>
                  <Text
                    style={
                      {
                        "color": "white",
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textShadowColor": undefined,
                        "textShadowRadius": undefined,
                      }
                    }
                  >
                    Mar 28 - Apr 03, 2025
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <
                    name="language"
                    style={
                      {
                        "color": "white",
                        "fontSize": 20,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "white",
                        "flexShrink": 1,
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textTransform": "uppercase",
                      }
                    }
                  >
                     - 
                  </Text>
                  <Text
                    style={
                      {
                        "color": "white",
                        "flexShrink": 1,
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textTransform": "uppercase",
                      }
                    }
                  >
                    10
                     attendees
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "gap": 4,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  {
                    "gap": 4,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#4513A1",
                      "height": 1,
                    }
                  }
                />
                <View>
                  <Text
                    style={
                      {
                        "color": "white",
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textShadowColor": undefined,
                        "textShadowRadius": undefined,
                      }
                    }
                  >
                    Event 1
                  </Text>
                  <Text
                    style={
                      [
                        {
                          "color": "white",
                          "flexShrink": 1,
                          "fontFamily": "AgencyFB-Bold",
                          "fontSize": 14,
                          "textTransform": "uppercase",
                        },
                        {
                          "fontSize": 12,
                        },
                      ]
                    }
                  >
                    Mar 30
                     - 
                    50
                     entrants
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "gap": 4,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#4513A1",
                      "height": 1,
                    }
                  }
                />
                <View>
                  <Text
                    style={
                      {
                        "color": "white",
                        "fontFamily": "AgencyFB-Bold",
                        "fontSize": 14,
                        "textShadowColor": undefined,
                        "textShadowRadius": undefined,
                      }
                    }
                  >
                    Event 2
                  </Text>
                  <Text
                    style={
                      [
                        {
                          "color": "white",
                          "flexShrink": 1,
                          "fontFamily": "AgencyFB-Bold",
                          "fontSize": 14,
                          "textTransform": "uppercase",
                        },
                        {
                          "fontSize": 12,
                        },
                      ]
                    }
                  >
                    Apr 02
                     - 
                    100
                     entrants
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
